y.output
   0  $accept : prog $end

   1  $$1 :

   2  prog : $$1 dList mainF

   3  $$2 :

   4  $$3 :

   5  mainF : VOID MAIN '(' ')' $$2 '{' lcmd $$3 '}'

   6  dList : decl dList
   7        |

   8  decl : type ID ';'

   9  type : INT
  10       | FLOAT
  11       | BOOL

  12  lcmd : lcmd cmd
  13       |

  14  cmd : exp ';'
  15      | '{' lcmd '}'
  16      | WRITE '(' LIT ')' ';'

  17  $$4 :

  18  cmd : WRITE '(' LIT $$4 ',' exp ')' ';'
  19      | READ '(' ID ')' ';'
  20      | BREAK ';'
  21      | CONTINUE ';'

  22  $$5 :

  23  $$6 :

  24  cmd : WHILE $$5 '(' exp ')' $$6 cmd

  25  $$7 :

  26  $$8 :

  27  cmd : DO $$7 cmd WHILE '(' $$8 exp ')' ';'

  28  $$9 :

  29  $$10 :

  30  $$11 :

  31  $$12 :

  32  cmd : FOR '(' $$9 FORINICIO ';' $$10 FORCONDICAO ';' $$11 FORINCREMENTO $$12 ')' cmd

  33  $$13 :

  34  cmd : IF '(' exp $$13 ')' cmd restoIf

  35  $$14 :

  36  restoIf : ELSE $$14 cmd
  37          |

  38  FORINICIO : exp
  39            |

  40  FORCONDICAO : exp
  41              |

  42  FORINCREMENTO : exp
  43                |

  44  exp : NUM
  45      | TRUE
  46      | FALSE
  47      | ID
  48      | '(' exp ')'
  49      | '!' exp
  50      | exp '+' exp
  51      | exp '-' exp
  52      | exp '*' exp
  53      | exp '/' exp
  54      | exp '%' exp
  55      | exp '>' exp
  56      | exp '<' exp
  57      | exp EQ exp
  58      | exp LEQ exp
  59      | exp GEQ exp
  60      | exp NEQ exp
  61      | exp OR exp
  62      | exp AND exp
  63      | PLUSPLUS ID
  64      | ID PLUSPLUS
  65      | MINUSMINUS ID
  66      | ID MINUSMINUS
  67      | ID '=' exp
  68      | ID PLUSEQUAL exp

  69  $$15 :

  70  $$16 :

  71  exp : exp $$15 '?' exp $$16 ':' exp

state 0
	$accept : . prog $end  (0)
	$$1 : .  (1)

	.  reduce 1

	prog  goto 1
	$$1  goto 2


state 1
	$accept : prog . $end  (0)

	$end  accept


state 2
	prog : $$1 . dList mainF  (2)
	dList : .  (7)

	INT  shift 3
	FLOAT  shift 4
	BOOL  shift 5
	VOID  reduce 7

	type  goto 6
	dList  goto 7
	decl  goto 8


state 3
	type : INT .  (9)

	.  reduce 9


state 4
	type : FLOAT .  (10)

	.  reduce 10


state 5
	type : BOOL .  (11)

	.  reduce 11


state 6
	decl : type . ID ';'  (8)

	ID  shift 9
	.  error


state 7
	prog : $$1 dList . mainF  (2)

	VOID  shift 10
	.  error

	mainF  goto 11


state 8
	dList : decl . dList  (6)
	dList : .  (7)

	INT  shift 3
	FLOAT  shift 4
	BOOL  shift 5
	VOID  reduce 7

	type  goto 6
	dList  goto 12
	decl  goto 8


state 9
	decl : type ID . ';'  (8)

	';'  shift 13
	.  error


state 10
	mainF : VOID . MAIN '(' ')' $$2 '{' lcmd $$3 '}'  (5)

	MAIN  shift 14
	.  error


state 11
	prog : $$1 dList mainF .  (2)

	.  reduce 2


state 12
	dList : decl dList .  (6)

	.  reduce 6


state 13
	decl : type ID ';' .  (8)

	.  reduce 8


state 14
	mainF : VOID MAIN . '(' ')' $$2 '{' lcmd $$3 '}'  (5)

	'('  shift 15
	.  error


state 15
	mainF : VOID MAIN '(' . ')' $$2 '{' lcmd $$3 '}'  (5)

	')'  shift 16
	.  error


state 16
	mainF : VOID MAIN '(' ')' . $$2 '{' lcmd $$3 '}'  (5)
	$$2 : .  (3)

	.  reduce 3

	$$2  goto 17


state 17
	mainF : VOID MAIN '(' ')' $$2 . '{' lcmd $$3 '}'  (5)

	'{'  shift 18
	.  error


state 18
	mainF : VOID MAIN '(' ')' $$2 '{' . lcmd $$3 '}'  (5)
	lcmd : .  (13)

	.  reduce 13

	lcmd  goto 19


state 19
	mainF : VOID MAIN '(' ')' $$2 '{' lcmd . $$3 '}'  (5)
	lcmd : lcmd . cmd  (12)
	$$3 : .  (4)

	ID  shift 20
	NUM  shift 21
	READ  shift 22
	WRITE  shift 23
	IF  shift 24
	WHILE  shift 25
	TRUE  shift 26
	FALSE  shift 27
	DO  shift 28
	FOR  shift 29
	PLUSPLUS  shift 30
	MINUSMINUS  shift 31
	BREAK  shift 32
	CONTINUE  shift 33
	'!'  shift 34
	'('  shift 35
	'{'  shift 36
	'}'  reduce 4

	$$3  goto 37
	cmd  goto 38
	exp  goto 39


state 20
	exp : ID .  (47)
	exp : ID . PLUSPLUS  (64)
	exp : ID . MINUSMINUS  (66)
	exp : ID . '=' exp  (67)
	exp : ID . PLUSEQUAL exp  (68)

	PLUSPLUS  shift 40
	MINUSMINUS  shift 41
	PLUSEQUAL  shift 42
	'='  shift 43
	EQ  reduce 47
	LEQ  reduce 47
	GEQ  reduce 47
	NEQ  reduce 47
	AND  reduce 47
	OR  reduce 47
	'?'  reduce 47
	':'  reduce 47
	'>'  reduce 47
	'<'  reduce 47
	'+'  reduce 47
	'-'  reduce 47
	'*'  reduce 47
	'/'  reduce 47
	'%'  reduce 47
	')'  reduce 47
	';'  reduce 47


state 21
	exp : NUM .  (44)

	.  reduce 44


state 22
	cmd : READ . '(' ID ')' ';'  (19)

	'('  shift 44
	.  error


state 23
	cmd : WRITE . '(' LIT ')' ';'  (16)
	cmd : WRITE . '(' LIT $$4 ',' exp ')' ';'  (18)

	'('  shift 45
	.  error


state 24
	cmd : IF . '(' exp $$13 ')' cmd restoIf  (34)

	'('  shift 46
	.  error


state 25
	cmd : WHILE . $$5 '(' exp ')' $$6 cmd  (24)
	$$5 : .  (22)

	.  reduce 22

	$$5  goto 47


state 26
	exp : TRUE .  (45)

	.  reduce 45


state 27
	exp : FALSE .  (46)

	.  reduce 46


state 28
	cmd : DO . $$7 cmd WHILE '(' $$8 exp ')' ';'  (27)
	$$7 : .  (25)

	.  reduce 25

	$$7  goto 48


state 29
	cmd : FOR . '(' $$9 FORINICIO ';' $$10 FORCONDICAO ';' $$11 FORINCREMENTO $$12 ')' cmd  (32)

	'('  shift 49
	.  error


state 30
	exp : PLUSPLUS . ID  (63)

	ID  shift 50
	.  error


state 31
	exp : MINUSMINUS . ID  (65)

	ID  shift 51
	.  error


state 32
	cmd : BREAK . ';'  (20)

	';'  shift 52
	.  error


state 33
	cmd : CONTINUE . ';'  (21)

	';'  shift 53
	.  error


state 34
	exp : '!' . exp  (49)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	PLUSPLUS  shift 30
	MINUSMINUS  shift 31
	'!'  shift 34
	'('  shift 35
	.  error

	exp  goto 54


state 35
	exp : '(' . exp ')'  (48)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	PLUSPLUS  shift 30
	MINUSMINUS  shift 31
	'!'  shift 34
	'('  shift 35
	.  error

	exp  goto 55


state 36
	cmd : '{' . lcmd '}'  (15)
	lcmd : .  (13)

	.  reduce 13

	lcmd  goto 56


state 37
	mainF : VOID MAIN '(' ')' $$2 '{' lcmd $$3 . '}'  (5)

	'}'  shift 57
	.  error


state 38
	lcmd : lcmd cmd .  (12)

	.  reduce 12


state 39
	cmd : exp . ';'  (14)
	exp : exp . '+' exp  (50)
	exp : exp . '-' exp  (51)
	exp : exp . '*' exp  (52)
	exp : exp . '/' exp  (53)
	exp : exp . '%' exp  (54)
	exp : exp . '>' exp  (55)
	exp : exp . '<' exp  (56)
	exp : exp . EQ exp  (57)
	exp : exp . LEQ exp  (58)
	exp : exp . GEQ exp  (59)
	exp : exp . NEQ exp  (60)
	exp : exp . OR exp  (61)
	exp : exp . AND exp  (62)
	exp : exp . $$15 '?' exp $$16 ':' exp  (71)
	$$15 : .  (69)

	EQ  shift 58
	LEQ  shift 59
	GEQ  shift 60
	NEQ  shift 61
	AND  shift 62
	OR  shift 63
	'>'  shift 64
	'<'  shift 65
	'+'  shift 66
	'-'  shift 67
	'*'  shift 68
	'/'  shift 69
	'%'  shift 70
	';'  shift 71
	'?'  reduce 69

	$$15  goto 72


state 40
	exp : ID PLUSPLUS .  (64)

	.  reduce 64


state 41
	exp : ID MINUSMINUS .  (66)

	.  reduce 66


state 42
	exp : ID PLUSEQUAL . exp  (68)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	PLUSPLUS  shift 30
	MINUSMINUS  shift 31
	'!'  shift 34
	'('  shift 35
	.  error

	exp  goto 73


state 43
	exp : ID '=' . exp  (67)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	PLUSPLUS  shift 30
	MINUSMINUS  shift 31
	'!'  shift 34
	'('  shift 35
	.  error

	exp  goto 74


state 44
	cmd : READ '(' . ID ')' ';'  (19)

	ID  shift 75
	.  error


state 45
	cmd : WRITE '(' . LIT ')' ';'  (16)
	cmd : WRITE '(' . LIT $$4 ',' exp ')' ';'  (18)

	LIT  shift 76
	.  error


state 46
	cmd : IF '(' . exp $$13 ')' cmd restoIf  (34)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	PLUSPLUS  shift 30
	MINUSMINUS  shift 31
	'!'  shift 34
	'('  shift 35
	.  error

	exp  goto 77


state 47
	cmd : WHILE $$5 . '(' exp ')' $$6 cmd  (24)

	'('  shift 78
	.  error


state 48
	cmd : DO $$7 . cmd WHILE '(' $$8 exp ')' ';'  (27)

	ID  shift 20
	NUM  shift 21
	READ  shift 22
	WRITE  shift 23
	IF  shift 24
	WHILE  shift 25
	TRUE  shift 26
	FALSE  shift 27
	DO  shift 28
	FOR  shift 29
	PLUSPLUS  shift 30
	MINUSMINUS  shift 31
	BREAK  shift 32
	CONTINUE  shift 33
	'!'  shift 34
	'('  shift 35
	'{'  shift 36
	.  error

	cmd  goto 79
	exp  goto 39


state 49
	cmd : FOR '(' . $$9 FORINICIO ';' $$10 FORCONDICAO ';' $$11 FORINCREMENTO $$12 ')' cmd  (32)
	$$9 : .  (28)

	.  reduce 28

	$$9  goto 80


state 50
	exp : PLUSPLUS ID .  (63)

	.  reduce 63


state 51
	exp : MINUSMINUS ID .  (65)

	.  reduce 65


state 52
	cmd : BREAK ';' .  (20)

	.  reduce 20


state 53
	cmd : CONTINUE ';' .  (21)

	.  reduce 21


54: reduce/reduce conflict (reduce 49, reduce 69) on '?'
state 54
	exp : '!' exp .  (49)
	exp : exp . '+' exp  (50)
	exp : exp . '-' exp  (51)
	exp : exp . '*' exp  (52)
	exp : exp . '/' exp  (53)
	exp : exp . '%' exp  (54)
	exp : exp . '>' exp  (55)
	exp : exp . '<' exp  (56)
	exp : exp . EQ exp  (57)
	exp : exp . LEQ exp  (58)
	exp : exp . GEQ exp  (59)
	exp : exp . NEQ exp  (60)
	exp : exp . OR exp  (61)
	exp : exp . AND exp  (62)
	exp : exp . $$15 '?' exp $$16 ':' exp  (71)
	$$15 : .  (69)

	.  reduce 49

	$$15  goto 72


state 55
	exp : '(' exp . ')'  (48)
	exp : exp . '+' exp  (50)
	exp : exp . '-' exp  (51)
	exp : exp . '*' exp  (52)
	exp : exp . '/' exp  (53)
	exp : exp . '%' exp  (54)
	exp : exp . '>' exp  (55)
	exp : exp . '<' exp  (56)
	exp : exp . EQ exp  (57)
	exp : exp . LEQ exp  (58)
	exp : exp . GEQ exp  (59)
	exp : exp . NEQ exp  (60)
	exp : exp . OR exp  (61)
	exp : exp . AND exp  (62)
	exp : exp . $$15 '?' exp $$16 ':' exp  (71)
	$$15 : .  (69)

	EQ  shift 58
	LEQ  shift 59
	GEQ  shift 60
	NEQ  shift 61
	AND  shift 62
	OR  shift 63
	'>'  shift 64
	'<'  shift 65
	'+'  shift 66
	'-'  shift 67
	'*'  shift 68
	'/'  shift 69
	'%'  shift 70
	')'  shift 81
	'?'  reduce 69

	$$15  goto 72


state 56
	lcmd : lcmd . cmd  (12)
	cmd : '{' lcmd . '}'  (15)

	ID  shift 20
	NUM  shift 21
	READ  shift 22
	WRITE  shift 23
	IF  shift 24
	WHILE  shift 25
	TRUE  shift 26
	FALSE  shift 27
	DO  shift 28
	FOR  shift 29
	PLUSPLUS  shift 30
	MINUSMINUS  shift 31
	BREAK  shift 32
	CONTINUE  shift 33
	'!'  shift 34
	'('  shift 35
	'{'  shift 36
	'}'  shift 82
	.  error

	cmd  goto 38
	exp  goto 39


state 57
	mainF : VOID MAIN '(' ')' $$2 '{' lcmd $$3 '}' .  (5)

	.  reduce 5


state 58
	exp : exp EQ . exp  (57)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	PLUSPLUS  shift 30
	MINUSMINUS  shift 31
	'!'  shift 34
	'('  shift 35
	.  error

	exp  goto 83


state 59
	exp : exp LEQ . exp  (58)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	PLUSPLUS  shift 30
	MINUSMINUS  shift 31
	'!'  shift 34
	'('  shift 35
	.  error

	exp  goto 84


state 60
	exp : exp GEQ . exp  (59)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	PLUSPLUS  shift 30
	MINUSMINUS  shift 31
	'!'  shift 34
	'('  shift 35
	.  error

	exp  goto 85


state 61
	exp : exp NEQ . exp  (60)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	PLUSPLUS  shift 30
	MINUSMINUS  shift 31
	'!'  shift 34
	'('  shift 35
	.  error

	exp  goto 86


state 62
	exp : exp AND . exp  (62)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	PLUSPLUS  shift 30
	MINUSMINUS  shift 31
	'!'  shift 34
	'('  shift 35
	.  error

	exp  goto 87


state 63
	exp : exp OR . exp  (61)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	PLUSPLUS  shift 30
	MINUSMINUS  shift 31
	'!'  shift 34
	'('  shift 35
	.  error

	exp  goto 88


state 64
	exp : exp '>' . exp  (55)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	PLUSPLUS  shift 30
	MINUSMINUS  shift 31
	'!'  shift 34
	'('  shift 35
	.  error

	exp  goto 89


state 65
	exp : exp '<' . exp  (56)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	PLUSPLUS  shift 30
	MINUSMINUS  shift 31
	'!'  shift 34
	'('  shift 35
	.  error

	exp  goto 90


state 66
	exp : exp '+' . exp  (50)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	PLUSPLUS  shift 30
	MINUSMINUS  shift 31
	'!'  shift 34
	'('  shift 35
	.  error

	exp  goto 91


state 67
	exp : exp '-' . exp  (51)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	PLUSPLUS  shift 30
	MINUSMINUS  shift 31
	'!'  shift 34
	'('  shift 35
	.  error

	exp  goto 92


state 68
	exp : exp '*' . exp  (52)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	PLUSPLUS  shift 30
	MINUSMINUS  shift 31
	'!'  shift 34
	'('  shift 35
	.  error

	exp  goto 93


state 69
	exp : exp '/' . exp  (53)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	PLUSPLUS  shift 30
	MINUSMINUS  shift 31
	'!'  shift 34
	'('  shift 35
	.  error

	exp  goto 94


state 70
	exp : exp '%' . exp  (54)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	PLUSPLUS  shift 30
	MINUSMINUS  shift 31
	'!'  shift 34
	'('  shift 35
	.  error

	exp  goto 95


state 71
	cmd : exp ';' .  (14)

	.  reduce 14


state 72
	exp : exp $$15 . '?' exp $$16 ':' exp  (71)

	'?'  shift 96
	.  error


73: shift/reduce conflict (shift 58, reduce 68) on EQ
73: shift/reduce conflict (shift 59, reduce 68) on LEQ
73: shift/reduce conflict (shift 60, reduce 68) on GEQ
73: shift/reduce conflict (shift 61, reduce 68) on NEQ
73: shift/reduce conflict (shift 62, reduce 68) on AND
73: shift/reduce conflict (shift 63, reduce 68) on OR
73: reduce/reduce conflict (reduce 68, reduce 69) on '?'
73: shift/reduce conflict (shift 64, reduce 68) on '>'
73: shift/reduce conflict (shift 65, reduce 68) on '<'
73: shift/reduce conflict (shift 66, reduce 68) on '+'
73: shift/reduce conflict (shift 67, reduce 68) on '-'
73: shift/reduce conflict (shift 68, reduce 68) on '*'
73: shift/reduce conflict (shift 69, reduce 68) on '/'
73: shift/reduce conflict (shift 70, reduce 68) on '%'
state 73
	exp : exp . '+' exp  (50)
	exp : exp . '-' exp  (51)
	exp : exp . '*' exp  (52)
	exp : exp . '/' exp  (53)
	exp : exp . '%' exp  (54)
	exp : exp . '>' exp  (55)
	exp : exp . '<' exp  (56)
	exp : exp . EQ exp  (57)
	exp : exp . LEQ exp  (58)
	exp : exp . GEQ exp  (59)
	exp : exp . NEQ exp  (60)
	exp : exp . OR exp  (61)
	exp : exp . AND exp  (62)
	exp : ID PLUSEQUAL exp .  (68)
	exp : exp . $$15 '?' exp $$16 ':' exp  (71)
	$$15 : .  (69)

	EQ  shift 58
	LEQ  shift 59
	GEQ  shift 60
	NEQ  shift 61
	AND  shift 62
	OR  shift 63
	'>'  shift 64
	'<'  shift 65
	'+'  shift 66
	'-'  shift 67
	'*'  shift 68
	'/'  shift 69
	'%'  shift 70
	'?'  reduce 68
	':'  reduce 68
	')'  reduce 68
	';'  reduce 68

	$$15  goto 72


74: reduce/reduce conflict (reduce 67, reduce 69) on '?'
state 74
	exp : exp . '+' exp  (50)
	exp : exp . '-' exp  (51)
	exp : exp . '*' exp  (52)
	exp : exp . '/' exp  (53)
	exp : exp . '%' exp  (54)
	exp : exp . '>' exp  (55)
	exp : exp . '<' exp  (56)
	exp : exp . EQ exp  (57)
	exp : exp . LEQ exp  (58)
	exp : exp . GEQ exp  (59)
	exp : exp . NEQ exp  (60)
	exp : exp . OR exp  (61)
	exp : exp . AND exp  (62)
	exp : ID '=' exp .  (67)
	exp : exp . $$15 '?' exp $$16 ':' exp  (71)
	$$15 : .  (69)

	EQ  shift 58
	LEQ  shift 59
	GEQ  shift 60
	NEQ  shift 61
	AND  shift 62
	OR  shift 63
	'>'  shift 64
	'<'  shift 65
	'+'  shift 66
	'-'  shift 67
	'*'  shift 68
	'/'  shift 69
	'%'  shift 70
	'?'  reduce 67
	':'  reduce 67
	')'  reduce 67
	';'  reduce 67

	$$15  goto 72


state 75
	cmd : READ '(' ID . ')' ';'  (19)

	')'  shift 97
	.  error


state 76
	cmd : WRITE '(' LIT . ')' ';'  (16)
	cmd : WRITE '(' LIT . $$4 ',' exp ')' ';'  (18)
	$$4 : .  (17)

	')'  shift 98
	','  reduce 17

	$$4  goto 99


state 77
	cmd : IF '(' exp . $$13 ')' cmd restoIf  (34)
	exp : exp . '+' exp  (50)
	exp : exp . '-' exp  (51)
	exp : exp . '*' exp  (52)
	exp : exp . '/' exp  (53)
	exp : exp . '%' exp  (54)
	exp : exp . '>' exp  (55)
	exp : exp . '<' exp  (56)
	exp : exp . EQ exp  (57)
	exp : exp . LEQ exp  (58)
	exp : exp . GEQ exp  (59)
	exp : exp . NEQ exp  (60)
	exp : exp . OR exp  (61)
	exp : exp . AND exp  (62)
	exp : exp . $$15 '?' exp $$16 ':' exp  (71)
	$$13 : .  (33)
	$$15 : .  (69)

	EQ  shift 58
	LEQ  shift 59
	GEQ  shift 60
	NEQ  shift 61
	AND  shift 62
	OR  shift 63
	'>'  shift 64
	'<'  shift 65
	'+'  shift 66
	'-'  shift 67
	'*'  shift 68
	'/'  shift 69
	'%'  shift 70
	'?'  reduce 69
	')'  reduce 33

	$$13  goto 100
	$$15  goto 72


state 78
	cmd : WHILE $$5 '(' . exp ')' $$6 cmd  (24)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	PLUSPLUS  shift 30
	MINUSMINUS  shift 31
	'!'  shift 34
	'('  shift 35
	.  error

	exp  goto 101


state 79
	cmd : DO $$7 cmd . WHILE '(' $$8 exp ')' ';'  (27)

	WHILE  shift 102
	.  error


state 80
	cmd : FOR '(' $$9 . FORINICIO ';' $$10 FORCONDICAO ';' $$11 FORINCREMENTO $$12 ')' cmd  (32)
	FORINICIO : .  (39)

	ID  shift 20
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	PLUSPLUS  shift 30
	MINUSMINUS  shift 31
	'!'  shift 34
	'('  shift 35
	';'  reduce 39

	exp  goto 103
	FORINICIO  goto 104


state 81
	exp : '(' exp ')' .  (48)

	.  reduce 48


state 82
	cmd : '{' lcmd '}' .  (15)

	.  reduce 15


83: reduce/reduce conflict (reduce 57, reduce 69) on '?'
state 83
	exp : exp . '+' exp  (50)
	exp : exp . '-' exp  (51)
	exp : exp . '*' exp  (52)
	exp : exp . '/' exp  (53)
	exp : exp . '%' exp  (54)
	exp : exp . '>' exp  (55)
	exp : exp . '<' exp  (56)
	exp : exp . EQ exp  (57)
	exp : exp EQ exp .  (57)
	exp : exp . LEQ exp  (58)
	exp : exp . GEQ exp  (59)
	exp : exp . NEQ exp  (60)
	exp : exp . OR exp  (61)
	exp : exp . AND exp  (62)
	exp : exp . $$15 '?' exp $$16 ':' exp  (71)
	$$15 : .  (69)

	'+'  shift 66
	'-'  shift 67
	'*'  shift 68
	'/'  shift 69
	'%'  shift 70
	EQ  reduce 57
	LEQ  reduce 57
	GEQ  reduce 57
	NEQ  reduce 57
	AND  reduce 57
	OR  reduce 57
	'?'  reduce 57
	':'  reduce 57
	'>'  reduce 57
	'<'  reduce 57
	')'  reduce 57
	';'  reduce 57

	$$15  goto 72


84: reduce/reduce conflict (reduce 58, reduce 69) on '?'
state 84
	exp : exp . '+' exp  (50)
	exp : exp . '-' exp  (51)
	exp : exp . '*' exp  (52)
	exp : exp . '/' exp  (53)
	exp : exp . '%' exp  (54)
	exp : exp . '>' exp  (55)
	exp : exp . '<' exp  (56)
	exp : exp . EQ exp  (57)
	exp : exp . LEQ exp  (58)
	exp : exp LEQ exp .  (58)
	exp : exp . GEQ exp  (59)
	exp : exp . NEQ exp  (60)
	exp : exp . OR exp  (61)
	exp : exp . AND exp  (62)
	exp : exp . $$15 '?' exp $$16 ':' exp  (71)
	$$15 : .  (69)

	'+'  shift 66
	'-'  shift 67
	'*'  shift 68
	'/'  shift 69
	'%'  shift 70
	EQ  reduce 58
	LEQ  reduce 58
	GEQ  reduce 58
	NEQ  reduce 58
	AND  reduce 58
	OR  reduce 58
	'?'  reduce 58
	':'  reduce 58
	'>'  reduce 58
	'<'  reduce 58
	')'  reduce 58
	';'  reduce 58

	$$15  goto 72


85: reduce/reduce conflict (reduce 59, reduce 69) on '?'
state 85
	exp : exp . '+' exp  (50)
	exp : exp . '-' exp  (51)
	exp : exp . '*' exp  (52)
	exp : exp . '/' exp  (53)
	exp : exp . '%' exp  (54)
	exp : exp . '>' exp  (55)
	exp : exp . '<' exp  (56)
	exp : exp . EQ exp  (57)
	exp : exp . LEQ exp  (58)
	exp : exp . GEQ exp  (59)
	exp : exp GEQ exp .  (59)
	exp : exp . NEQ exp  (60)
	exp : exp . OR exp  (61)
	exp : exp . AND exp  (62)
	exp : exp . $$15 '?' exp $$16 ':' exp  (71)
	$$15 : .  (69)

	'+'  shift 66
	'-'  shift 67
	'*'  shift 68
	'/'  shift 69
	'%'  shift 70
	EQ  reduce 59
	LEQ  reduce 59
	GEQ  reduce 59
	NEQ  reduce 59
	AND  reduce 59
	OR  reduce 59
	'?'  reduce 59
	':'  reduce 59
	'>'  reduce 59
	'<'  reduce 59
	')'  reduce 59
	';'  reduce 59

	$$15  goto 72


86: reduce/reduce conflict (reduce 60, reduce 69) on '?'
state 86
	exp : exp . '+' exp  (50)
	exp : exp . '-' exp  (51)
	exp : exp . '*' exp  (52)
	exp : exp . '/' exp  (53)
	exp : exp . '%' exp  (54)
	exp : exp . '>' exp  (55)
	exp : exp . '<' exp  (56)
	exp : exp . EQ exp  (57)
	exp : exp . LEQ exp  (58)
	exp : exp . GEQ exp  (59)
	exp : exp . NEQ exp  (60)
	exp : exp NEQ exp .  (60)
	exp : exp . OR exp  (61)
	exp : exp . AND exp  (62)
	exp : exp . $$15 '?' exp $$16 ':' exp  (71)
	$$15 : .  (69)

	'+'  shift 66
	'-'  shift 67
	'*'  shift 68
	'/'  shift 69
	'%'  shift 70
	EQ  reduce 60
	LEQ  reduce 60
	GEQ  reduce 60
	NEQ  reduce 60
	AND  reduce 60
	OR  reduce 60
	'?'  reduce 60
	':'  reduce 60
	'>'  reduce 60
	'<'  reduce 60
	')'  reduce 60
	';'  reduce 60

	$$15  goto 72


87: reduce/reduce conflict (reduce 62, reduce 69) on '?'
state 87
	exp : exp . '+' exp  (50)
	exp : exp . '-' exp  (51)
	exp : exp . '*' exp  (52)
	exp : exp . '/' exp  (53)
	exp : exp . '%' exp  (54)
	exp : exp . '>' exp  (55)
	exp : exp . '<' exp  (56)
	exp : exp . EQ exp  (57)
	exp : exp . LEQ exp  (58)
	exp : exp . GEQ exp  (59)
	exp : exp . NEQ exp  (60)
	exp : exp . OR exp  (61)
	exp : exp . AND exp  (62)
	exp : exp AND exp .  (62)
	exp : exp . $$15 '?' exp $$16 ':' exp  (71)
	$$15 : .  (69)

	EQ  shift 58
	LEQ  shift 59
	GEQ  shift 60
	NEQ  shift 61
	'>'  shift 64
	'<'  shift 65
	'+'  shift 66
	'-'  shift 67
	'*'  shift 68
	'/'  shift 69
	'%'  shift 70
	AND  reduce 62
	OR  reduce 62
	'?'  reduce 62
	':'  reduce 62
	')'  reduce 62
	';'  reduce 62

	$$15  goto 72


88: reduce/reduce conflict (reduce 61, reduce 69) on '?'
state 88
	exp : exp . '+' exp  (50)
	exp : exp . '-' exp  (51)
	exp : exp . '*' exp  (52)
	exp : exp . '/' exp  (53)
	exp : exp . '%' exp  (54)
	exp : exp . '>' exp  (55)
	exp : exp . '<' exp  (56)
	exp : exp . EQ exp  (57)
	exp : exp . LEQ exp  (58)
	exp : exp . GEQ exp  (59)
	exp : exp . NEQ exp  (60)
	exp : exp . OR exp  (61)
	exp : exp OR exp .  (61)
	exp : exp . AND exp  (62)
	exp : exp . $$15 '?' exp $$16 ':' exp  (71)
	$$15 : .  (69)

	EQ  shift 58
	LEQ  shift 59
	GEQ  shift 60
	NEQ  shift 61
	AND  shift 62
	'>'  shift 64
	'<'  shift 65
	'+'  shift 66
	'-'  shift 67
	'*'  shift 68
	'/'  shift 69
	'%'  shift 70
	OR  reduce 61
	'?'  reduce 61
	':'  reduce 61
	')'  reduce 61
	';'  reduce 61

	$$15  goto 72


89: reduce/reduce conflict (reduce 55, reduce 69) on '?'
state 89
	exp : exp . '+' exp  (50)
	exp : exp . '-' exp  (51)
	exp : exp . '*' exp  (52)
	exp : exp . '/' exp  (53)
	exp : exp . '%' exp  (54)
	exp : exp . '>' exp  (55)
	exp : exp '>' exp .  (55)
	exp : exp . '<' exp  (56)
	exp : exp . EQ exp  (57)
	exp : exp . LEQ exp  (58)
	exp : exp . GEQ exp  (59)
	exp : exp . NEQ exp  (60)
	exp : exp . OR exp  (61)
	exp : exp . AND exp  (62)
	exp : exp . $$15 '?' exp $$16 ':' exp  (71)
	$$15 : .  (69)

	'+'  shift 66
	'-'  shift 67
	'*'  shift 68
	'/'  shift 69
	'%'  shift 70
	EQ  reduce 55
	LEQ  reduce 55
	GEQ  reduce 55
	NEQ  reduce 55
	AND  reduce 55
	OR  reduce 55
	'?'  reduce 55
	':'  reduce 55
	'>'  reduce 55
	'<'  reduce 55
	')'  reduce 55
	';'  reduce 55

	$$15  goto 72


90: reduce/reduce conflict (reduce 56, reduce 69) on '?'
state 90
	exp : exp . '+' exp  (50)
	exp : exp . '-' exp  (51)
	exp : exp . '*' exp  (52)
	exp : exp . '/' exp  (53)
	exp : exp . '%' exp  (54)
	exp : exp . '>' exp  (55)
	exp : exp . '<' exp  (56)
	exp : exp '<' exp .  (56)
	exp : exp . EQ exp  (57)
	exp : exp . LEQ exp  (58)
	exp : exp . GEQ exp  (59)
	exp : exp . NEQ exp  (60)
	exp : exp . OR exp  (61)
	exp : exp . AND exp  (62)
	exp : exp . $$15 '?' exp $$16 ':' exp  (71)
	$$15 : .  (69)

	'+'  shift 66
	'-'  shift 67
	'*'  shift 68
	'/'  shift 69
	'%'  shift 70
	EQ  reduce 56
	LEQ  reduce 56
	GEQ  reduce 56
	NEQ  reduce 56
	AND  reduce 56
	OR  reduce 56
	'?'  reduce 56
	':'  reduce 56
	'>'  reduce 56
	'<'  reduce 56
	')'  reduce 56
	';'  reduce 56

	$$15  goto 72

